[tool.poetry]
name = "goit-web-hw-02"
version = "0.1.0"
description = "Homework #2"
authors = ["Danyil Stukachov <stukachov.daniil@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
